# pytemporal

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FLAMEGRAPH.md  IMPLEMENTATION_CHECKLIST.md  PERFORMANCE_IMPROVEMENT_ROADMAP.md  PERFORMANCE_REGRESSION_ANALYSIS.md  PHASE1_SUCCESS.md  README.md  TODO-TOMBSTONE-ISSUE.md  data.js  debug_arrow_type.py  debug_batch_count.py  debug_performance.py  debug_timestamp.py  index.html  package-lock.json  processor.py  pyproject.toml  python_bench.py  quick_start_optimization.md  setup.py  test_arro3_conversion.py  validate_refactoring.py
.gitea/workflows/: build-wheels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/workflows/: benchmarks.yml  build-wheels.yml
bench/: data.js  index.html
bench/criterion/: python_bench_output.json
bench/criterion/conflation_effectiveness/new/: estimates.json  sample.json  tukey.json
bench/criterion/medium_dataset/base/: sample.json
bench/criterion/medium_dataset/new/: benchmark.json  estimates.json  tukey.json
bench/criterion/parallel_effectiveness/report/: index.html
bench/criterion/report/: index.html
bench/criterion/small_dataset/base/: sample.json  tukey.json
bench/criterion/small_dataset/change/: estimates.json
bench/criterion/small_dataset/new/: estimates.json
bench/criterion/small_dataset/report/: index.html
benches/: bitemporal_benchmarks.rs  test_python_benchmarks.py
criterion/: python_bench_output.json
criterion/conflation_effectiveness/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/conflation_effectiveness/change/: estimates.json
criterion/conflation_effectiveness/new/: estimates.json  sample.json  tukey.json
criterion/conflation_effectiveness/report/: index.html
criterion/medium_dataset/base/: estimates.json  sample.json  tukey.json
criterion/medium_dataset/change/: estimates.json
criterion/medium_dataset/new/: estimates.json  sample.json  tukey.json
criterion/medium_dataset/report/: index.html
criterion/parallel_effectiveness/scenario/balanced_workload/base/: estimates.json  sample.json  tukey.json
criterion/parallel_effectiveness/scenario/balanced_workload/change/: estimates.json
criterion/parallel_effectiveness/scenario/balanced_workload/new/: estimates.json  sample.json  tukey.json
criterion/parallel_effectiveness/scenario/balanced_workload/report/: index.html
criterion/parallel_effectiveness/scenario/few_ids_many_records/base/: estimates.json  sample.json  tukey.json
criterion/parallel_effectiveness/scenario/few_ids_many_records/change/: estimates.json
criterion/parallel_effectiveness/scenario/few_ids_many_records/new/: estimates.json  sample.json  tukey.json
criterion/parallel_effectiveness/scenario/few_ids_many_records/report/: index.html
criterion/parallel_effectiveness/scenario/many_ids_few_records/base/: estimates.json  sample.json  tukey.json
criterion/parallel_effectiveness/scenario/many_ids_few_records/change/: estimates.json
criterion/parallel_effectiveness/scenario/many_ids_few_records/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/parallel_effectiveness/scenario/many_ids_few_records/report/: index.html
criterion/parallel_effectiveness/scenario/report/: index.html
criterion/report/: index.html
criterion/scaling_by_dataset_size/records/10/base/: estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/10/change/: estimates.json
criterion/scaling_by_dataset_size/records/10/new/: estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/10/report/: index.html
criterion/scaling_by_dataset_size/records/100/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/100/change/: estimates.json
criterion/scaling_by_dataset_size/records/100/new/: estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/100/report/: index.html
criterion/scaling_by_dataset_size/records/50/base/: estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/50/change/: estimates.json
criterion/scaling_by_dataset_size/records/50/new/: estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/50/report/: index.html
criterion/scaling_by_dataset_size/records/500/base/: estimates.json  sample.json  tukey.json
criterion/scaling_by_dataset_size/records/report/: index.html
criterion/scaling_by_dataset_size/report/: index.html
criterion/small_dataset/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/small_dataset/change/: estimates.json
criterion/small_dataset/new/: estimates.json  sample.json  tukey.json
criterion/small_dataset/report/: index.html
docs/: API_REFERENCE.md  EXAMPLES.md  PERFORMANCE.md  benchmark-publishing.md  ci-cd-workflows.md  gitea-publishing.md
python/bitemporal_timeseries/: __init__.py  processor.py
python/pytemporal/: __init__.py  processor.py
scripts/: add_flamegraphs_to_html.py  add_pytemporal_branding.py
src/: arrow_hash.rs  batch_utils.rs  conflation.rs  lib.rs  overlap.rs  timeline.rs  types.rs
tests/: additional_integration_tests.rs  benchmark_python_wrapper.py  integration_tests.rs  test_add_hash_key.py  test_batch_utils_types.py  test_bitemporal.py  test_bitemporal_manual.py  test_hash_normalization.py  test_null_and_boolean_support.py  test_postgres_types.py  test_processor.py  test_schema_alignment.py  test_timezone_handling.py
tests/scenarios/: basic.py  complex.py  conflation.py  defaults.py
(+59 files in other folders)
