[package]
name = "pytemporal"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.4"
pyo3 = "0.21"
pyo3-arrow = "0.3"
chrono = "0.4"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rayon = "1.8"
ordered-float = "4.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "cargo_bench_support"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[features]
py-ext = ["pyo3/extension-module"]

[lib]
name = "pytemporal"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[[bench]]
name = "bitemporal_benchmarks"
harness = false

