[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "bitemporal-timeseries"
version = "0.1.0"
description = "High-performance bitemporal timeseries update processor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "black",
    "mypy",
    "ruff",
]