[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pytemporal"
version = "0.1.0"
description = "High-performance bitemporal timeseries update processor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "arro3-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "black",
    "mypy",
    "ruff",
]

[tool.maturin]
python-source = "python"
module-name = "pytemporal"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark",
    "black",
    "mypy",
    "ruff",
]
