[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pytemporal"
version = "0.1.0"
description = "High-performance bitemporal data processing for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "PyTemporal Contributors"},
]
keywords = ["bitemporal", "timeseries", "data-processing", "temporal", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/gingermike/pytemporal"
Repository = "https://github.com/gingermike/pytemporal"
Documentation = "https://gingermike.github.io/pytemporal/"
Changelog = "https://github.com/gingermike/pytemporal/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/gingermike/pytemporal/issues"
"Performance Benchmarks" = "https://gingermike.github.io/pytemporal/"

dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "arro3-core",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "black",
    "mypy",
    "ruff",
]

[tool.maturin]
python-source = "python"
module-name = "pytemporal"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark",
    "black",
    "mypy",
    "ruff",
    "maturin>=1.9.4",
]
